Fix the use of stub data and multiple imports in tests